--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,9 +22,10 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
@@ -51,7 +52,7 @@ android {
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        multiDexEnabled true
+        multiDexEnabled = true
 
     }
 
@@ -62,7 +63,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
-    buildToolsVersion '33.0.0'
+    buildToolsVersion '33'
 }
 
 flutter {
